New style gauge

--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -62,7 +62,7 @@
         </div>
         
         <div id="gaugeHolder" class="controlHolder">
-          <canvas id="tempGauge" data-type="radial-gauge"></canvas> 
+          <canvas id="tempGauge"></canvas> 
         </div>  
 
         <div id="tempControl" class="controlHolder">
