Set gauge values

--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -52,7 +52,7 @@
 
     <div id="wrapper">
       <div class="header">
-        <p id="headerText"><strong>Brew: </strong></p>
+        <div><h1 id="headerText"><strong>Brew: </strong></h1></div>
         <input id="pbShowConfiguration" type="image" src="images/settings_48px_352095.svg" disabled/>  
       </div>  
       <div id="userInputSection">   
