Can create a new configuration

--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -51,7 +51,8 @@ Brewage Select Popup
               <tr> 
                 <td>Configuration</td>  
                 <td><select id="newBrew_ConfigSelect"></td>
-                <td><input id="pbNewConfig" type="button" value="New Config" onclick="ShowConfigurationPopup();" /></td>
+                <td><input id="pbOpenConfig" type="button" value="Open" onclick="ShowConfigurationPopup();" /></td>
+                <td><input id="pbNewConfig" type="button" value="New" onclick="ShowConfigurationPopup();" /></td>
               </tr>
               <!-- <tr> 
                 <td>Mashing Schema</td> 
@@ -77,7 +78,7 @@ Configuration Popup
               <tr> <td>P</td> <td><input type="text" id="Configuration_P"></td></tr>
               <tr> <td>I</td> <td><input type="text" id="Configuration_I"></td></tr>
               <tr> <td>D</td> <td><input type="text" id="Configuration_D"></td></tr>
-              <tr> <td>StepsPerRevolution</td> <td><input readonly type="text" id="Configuration_StepsPerRevolution"></td></tr>
+              <tr> <td>StepsPerRevolution</td> <td><input type="text" id="Configuration_StepsPerRevolution"></td></tr>
             </table>
             <hr>
             <div>
